--- a/conf.toml
+++ b/conf.toml
@@ -1,5 +1,5 @@
 "DbUser" = "postgres"
-"DbPassword" = "changeme"
+"DbPassword" = "D3v0p5Tr41n1ng"
 "DbName" = "app"
 "DbPort" = "5432"
 "DbHost" = "localhost"
