Update azure-pipelines.yml with web app task

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,3 +37,9 @@ stages:
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
           $(tag)
+- task: AzureWebApp@1
+  inputs:
+    azureSubscription: 'Test Platform(8c1a7e9c-1be9-4afe-bd64-7eb95d473bcc)'
+    appType: 'webAppLinux'
+    appName: 'techchallengeapp'
+    package: '$(System.DefaultWorkingDirectory)/**/*.zip'
